2018-04-03  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #22947]
	* bits/uio-ext.h (RWF_APPEND): New.
	* sysdeps/unix/sysv/linux/bits/uio-ext.h (RWF_APPEND): Likewise.
	* manual/llio.texi: Document RWF_APPEND.
	* misc/tst-preadvwritev2-common.c (RWF_APPEND): New.
	(RWF_SUPPORTED): Add RWF_APPEND.

2018-03-27  Jesse Hathaway  <jesse@mbuki-mvuki.org>

	* sysdeps/unix/sysv/linux/getlogin_r.c (__getlogin_r_loginuid): Return
	early when linux sentinel value is set.

2018-03-27  Andreas Schwab  <schwab@suse.de>

	[BZ #23005]
	* resolv/res_send.c (__res_context_send): Return ENOMEM if
	allocation of private copy of nsaddr_list fails.

2018-03-20  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17343]
	* stdlib/random_r.c (__random_r): Use unsigned arithmetic for
	possibly overflowing computations.

2018-04-26  Aurelien Jarno  <aurelien@aurel32.net>

	* signal/tst-sigaction.c: New file to test BZ #23069.
	* signal/Makefile (tests): Fix indentation. Add tst-sigaction.

2018-04-28  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #23069]
	* sysdeps/unix/sysv/linux/riscv/kernel_sigaction.h: New file.

2018-03-29  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/i386/tst-bz21269.c (do_test): Also
	capture SIGBUS.

2018-03-23  Andrew Senkevich  <andrew.senkevich@intel.com>
	    Max Horn  <max@quendi.de>

	[BZ #22644]
	* sysdeps/i386/i686/multiarch/memcpy-sse2-unaligned.S: Fixed
	branch conditions.
	* string/test-memmove.c (do_test2): New testcase.

2018-02-22  Andrew Waterman <andrew@sifive.com>

	[BZ # 22884]
	* sysdeps/riscv/rvd/s_fmax.c (__fmax): Handle sNaNs correctly.
	* sysdeps/riscv/rvd/s_fmin.c (__fmin): Likewise.
	* sysdeps/riscv/rvf/s_fmaxf.c (__fmaxf): Likewise.
	* sysdeps/riscv/rvf/s_fminf.c (__fminf): Likewise.

2018-02-22  DJ Delorie  <dj@delorie.com>

	* sysdeps/riscv/tls-macros.h: Do not initialize $gp.

2018-03-16  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #22963]
	* localedata/locales/cs_CZ (mon): Rename to...
	(alt_mon): This.