@@ -1,3 +1,8 @@
+2018-04-05  Florian Weimer  <fweimer@redhat.com>
+
+	* manual/examples/mbstouwcs.c: New file.
+	* manual/charset.texi (Converting a Character): Include it.
+
 2018-04-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #22947]
